[build-system]
requires = ["scikit-build-core", "pybind11"]
build-backend = "scikit_build_core.build"

[project]
name = "musica"
dynamic = ["version"]
readme = "README.md"
description = "MUSICA is a Python library for performing computational simulations in atmospheric chemistry."
authors = [
  { name = "Matthew Dawsom", email = "mattdawson@ucar.edu" },
  { name = "Jiwon Gim", email = "jiwongim@ucar.edu" },
  { name = "David Fillmore", email = "fillmore@ucar.edu" },
  { name = "Kyle Shores", email = "kshores@ucar.edu" },
  { name = "Montek Thind", email = "mthind@ucar.edu" },
]
maintainers = [
  { name = "ACOM MUSICA Developers", email = "musica-support@ucar.edu" },
]
license = { file = "LICENSE" }

dependencies = [
  "pyyaml>=6.0.2",
  "xarray>=2022.3.0",
  "ussa1976>=v0.3.4"
]

[project.optional-dependencies]
test = ["numpy", "pytest", "matplotlib"]

gpu = ["nvidia-cublas-cu12", "nvidia-cuda-runtime-cu12"]

tutorial = [
  "pandas",
  "matplotlib",
  "numpy",
  "scipy",
  "seaborn",
  "dask[distributed]",
  "dask-jobqueue",
]

[project.scripts]
musica-cli = "musica.main:main"

[tool.scikit-build]
# uncomment this line and set the build type to debug if you want to use gdb to find segfaults
# then uncomment the line below to set the build directory so that the degbug articacts are not deleted
# then build and run the python docker file with:
#   docker build -t musica -f docker/Dockerfile.python .
#   docker run -it --rm musica
#   gdb --args python /musica/musica/test/test_carma.py
# build-dir="python_build"
cmake.build-type = "Release"
cmake.define.MUSICA_ENABLE_PYTHON_LIBRARY = "ON"
cmake.define.MUSICA_BUILD_FORTRAN_INTERFACE = "OFF"
cmake.define.MUSICA_ONLY_PYTHON = "ON"
cmake.define.MUSICA_ENABLE_TESTS = "OFF"
cmake.define.CMAKE_POLICY_VERSION_MINIMUM = "3.5"
cmake.define.MUSICA_SET_MICM_DEFAULT_VECTOR_SIZE = "1"
cmake.define.CMAKE_VERBOSE_MAKEFILE = "ON"
build.verbose = true

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.any.env.BUILD_GPU = true
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "all_major"
cmake.define.CMAKE_CUDA_COMPILER = "/usr/local/cuda/bin/nvcc"

# 32 bit linux cannot be built with CUDA support
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "i686"
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "None"
cmake.define.MUSICA_ENABLE_TUVX = "OFF"
cmake.define.MUSICA_ENABLE_CARMA = "OFF"

# Skip GPU for aarch64 builds
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "aarch64"
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "None"

[[tool.scikit-build.overrides]]
if.platform-system = "win32"
inherit.cmake.define = "append"
cmake.define.MUSICA_ENABLE_TUVX = "OFF"
cmake.define.MUSICA_ENABLE_CARMA = "OFF"

[project.urls]
homepage = "https://wiki.ucar.edu/display/MUSICA/MUSICA+Home"

# dynamically read the version: https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'musica-distribution VERSION\s+(?P<value>[0-9.]+)'

[[tool.scikit-build.generate]]
path = "musica/_version.py"
template = '''
version = "${version}"
'''

# you can test cibuildwheel on any computer with docker directly. First, make a 
# new python environment and install cibbuildwheel into it
# then, run something like this:
# CIBW_ARCHS=x86_64 CIBW_PLATFORM=linux cibuildwheel --output-dir wheelhouse > log.txt 2>&1
[tool.cibuildwheel]
# Increase pip debugging output
build-verbosity = 3

# Add your desired build configuration
build = ["cp39-*", "cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*", "cp315-*"]
skip = "cp27-* cp34-* cp35-* cp36-* *musllinux*"

# Set up pre-build hooks
[tool.cibuildwheel.macos]
environment.MACOSX_DEPLOYMENT_TARGET = "10.15"
before-all = "bash musica/tools/prepare_build_environment_macos.sh"

[tool.cibuildwheel.linux]
before-all = "musica/tools/prepare_build_environment_linux.sh"
repair-wheel-command = "bash musica/tools/repair_wheel_gpu.sh {wheel} {dest_dir}"
# Use manylinux_2_28 for modern GCC 8.5 and NetCDF compatibility
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"

[tool.cibuildwheel.linux.environment]
CUDA_PATH = "/usr/local/cuda"
PATH = "/usr/local/cuda/bin:$PATH"
LD_LIBRARY_PATH = "/usr/local/cuda/lib64:$LD_LIBRARY_PATH"
BUILD_GPU = 1

[tool.cibuildwheel.windows]
