[build-system]
requires = ["scikit-build-core>=0.11.0"]
build-backend = "scikit_build_core.build"

[project]
name = "musica"
dynamic = ["version"]
readme = "README.md"
description = "MUSICA is a Python library for performing computational simulations in atmospheric chemistry."
requires-python = ">=3.10"
authors = [
  { name = "Matthew Dawsom", email = "mattdawson@ucar.edu" },
  { name = "Jiwon Gim", email = "jiwongim@ucar.edu" },
  { name = "David Fillmore", email = "fillmore@ucar.edu" },
  { name = "Kyle Shores", email = "kshores@ucar.edu" },
  { name = "Montek Thind", email = "mthind@ucar.edu" },
]
maintainers = [
  { name = "ACOM MUSICA Developers", email = "musica-support@ucar.edu" },
]
license = { file = "LICENSE" }

dependencies = [
  "netCDF4>=1.7.3",
  "numpy>=2.0.0",
  "pandas>=2.2.0",
  "pyyaml>=6.0.2",
  "xarray>=2022.3.0",
]

[project.urls]
homepage = "https://wiki.ucar.edu/display/MUSICA/MUSICA+Home"

[project.optional-dependencies]
test = [
  "pytest-cov>=4.0.0",
  "pytest>=7.0.0",
  "ussa1976>=0.3.4; platform_machine != 'i686' and (platform_machine != 'arm64' or platform_system != 'Windows')",
]

cli = [
  "matplotlib>=3.7.0",
  "pvlib>=0.14.0",
  "ussa1976>=0.3.4; platform_machine != 'i686' and (platform_machine != 'arm64' or platform_system != 'Windows')",
]

gpu = ["nvidia-cublas-cu12>=12.6.4.1", "nvidia-cuda-runtime-cu12>=12.6.68"]

tutorial = [
  "dask-jobqueue>=0.8.0",
  "dask[distributed]>=2022.3.0",
  "graphviz>=0.18",
  "matplotlib>=3.7.0",
  "scipy>=1.10.0",
  "seaborn>=0.12.0",
]

[project.scripts]
musica-cli = "musica.main:main"

[tool.scikit-build]
# build-dir="python_build"
# on windows, build-type is ignored and must be set with cmake.define.CMAKE_BUILD_TYPE
# cmake.define.CMAKE_BUILD_TYPE = "Debug"
cmake.build-type = "Release"
cmake.define.MUSICA_ENABLE_PYTHON_LIBRARY = "ON"
cmake.define.MUSICA_BUILD_FORTRAN_INTERFACE = "OFF"
cmake.define.MUSICA_ENABLE_TESTS = "OFF"
cmake.define.CMAKE_POLICY_VERSION_MINIMUM = "3.5"
cmake.define.MUSICA_SET_MICM_DEFAULT_VECTOR_SIZE = "4"
cmake.define.CMAKE_VERBOSE_MAKEFILE = "ON"
build.verbose = true
logging.level = "DEBUG"

[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.any.env.BUILD_GPU = true
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "all_major"
cmake.define.CMAKE_CUDA_COMPILER = "/usr/local/cuda/bin/nvcc"

# 32 bit linux cannot be built with CUDA support
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "i686"
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "None"
cmake.define.MUSICA_ENABLE_TUVX = "OFF"
cmake.define.MUSICA_ENABLE_CARMA = "OFF"

# Skip GPU for aarch64 builds
[[tool.scikit-build.overrides]]
if.platform-system = "linux"
if.platform-machine = "aarch64"
inherit.cmake.define = "append"
cmake.define.MUSICA_GPU_TYPE = "None"

# dynamically read the version: https://scikit-build-core.readthedocs.io/en/latest/configuration.html#dynamic-metadata
[tool.scikit-build.metadata.version]
provider = "scikit_build_core.metadata.regex"
input = "CMakeLists.txt"
regex = 'musica-distribution VERSION\s+(?P<value>[0-9.]+)'

[[tool.scikit-build.generate]]
path = "musica/_version.py"
template = '''
version = "${version}"
'''

# you can test cibuildwheel on any computer with docker directly. First, make a 
# new python environment and install cibbuildwheel into it
# then, run something like this:
# CIBW_ARCHS=x86_64 CIBW_PLATFORM=linux cibuildwheel --output-dir wheelhouse > log.txt 2>&1
#
# if you want to speed up the build for linux x86_64 in particular since it requires pulling
# down the cuda libraries, uncomment these lines:
#   - `container-engine`
#   - `manylinux-x86_64-image` pointing to `musica`
# comment out these lines:
#  - `manylinux-x86_64-image` pointing to `manylinux_2_28`
#  - before-all line for linux
# and build the musica docker image locally first with:
# docker build --platform linux/amd64 -t musica -f docker/Dockerfile.manylinux.gpu .
#
[tool.cibuildwheel]
# Increase pip debugging output
build-verbosity = 3

# container-engine = { name = "docker", create-args = ["--pull=never"] }

# Add your desired build configuration
build = ["cp310-*", "cp311-*", "cp312-*", "cp313-*", "cp314-*"]
skip = ["*musllinux*"]

# Will cause the wheel to be installed with `pip install <wheel_file>[test]`
test-extras = ["test", "cli"]

# This is only required for the --convert test command
test-sources = ["configs"]

test-skip = "*-*linux_i686"

test-command = [
  '''python -c "import musica; print(f'musica v{musica.__version__}')"''',
  "musica-cli --help",
  "pytest {project}/python/test",
  "musica-cli --convert configs/v0/TS1/config.json -o ts1.json",
  "musica-cli -e CARMA_Aluminum -o .",
  "python carma_aluminum.py",
  "musica-cli -e CARMA_Sulfate -o .",
  "python carma_sulfate.py",
  "musica-cli -e Lorenz_Attractor -o .",
  "python lorenz.py",
  "musica-cli -e Sulfate_Box_Model -o .",
  "python sulfate_box_model.py",
  "musica-cli -e TS1BoxModel -o .",
  "python ts1_box_model.py",
  "musica-cli -e TS1LatinHyperCube -o .",
  "python ts1_latin_hypercube.py",
  "musica-cli -e Chapman -o .",
  "python chapman.py",
]

# Set up pre-build hooks
[tool.cibuildwheel.macos]
before-all = "bash python/tools/prepare_build_environment_macos.sh"

[tool.cibuildwheel.macos.environment]
MACOSX_DEPLOYMENT_TARGET = "15.0"
# Use prebuilt musica library and Clang compiler (avoid GCC 14 header conflicts with macOS 15 SDK)
CMAKE_ARGS = "-DMUSICA_USE_PREBUILT=ON -DCMAKE_PREFIX_PATH=/tmp/musica-prebuilt -DCMAKE_C_COMPILER=clang -DCMAKE_CXX_COMPILER=clang++"

[tool.cibuildwheel.linux]
before-all = "python/tools/prepare_build_environment_linux.sh"
repair-wheel-command = "bash python/tools/repair_wheel_gpu.sh {wheel} {dest_dir}"
# Use manylinux_2_28 for modern GCC 8.5 and NetCDF compatibility
# manylinux-x86_64-image = "musica" # only for faster builds during local testing
manylinux-x86_64-image = "manylinux_2_28"
manylinux-aarch64-image = "manylinux_2_28"
manylinux-i686-image = "manylinux_2_28"

[tool.cibuildwheel.linux.environment]
CUDA_PATH = "/usr/local/cuda"
PATH = "/usr/local/cuda/bin:$PATH"
LD_LIBRARY_PATH = "/usr/local/cuda/lib64:$LD_LIBRARY_PATH"
BUILD_GPU = "1"
# Use prebuilt musica library
CMAKE_ARGS = "-DMUSICA_USE_PREBUILT=ON -DCMAKE_PREFIX_PATH=/opt/musica-prebuilt"

[tool.cibuildwheel.windows]
before-all = "bash python/tools/prepare_build_environment_windows.sh"
repair-wheel-command = "bash python/tools/repair_wheel_windows.sh {wheel} {dest_dir}"
# Only build Windows ARM64 wheels for Python 3.11+
skip = ["cp39-win_arm64", "cp310-win_arm64"]
test-command = [
  "python -c \"import musica; print(musica.__version__)\"",
  "musica-cli --help",
  "pytest {project}\\python\\test -k \"not tuvx\"",
]

[tool.cibuildwheel.windows.environment]
# Use prebuilt musica library (cygpath converts MSYS2 path to Windows path for CMake)
CMAKE_ARGS = "-DMUSICA_USE_PREBUILT=ON -DCMAKE_PREFIX_PATH=$(cygpath -m /opt/musica-prebuilt)"